--- a/web/react-front/package.json
+++ b/web/react-front/package.json
@@ -7,6 +7,9 @@
     "@testing-library/react": "^11.1.2",
     "@testing-library/user-event": "^12.2.2",
     "bootstrap": "^4.5.3",
+    "jquery": "^3.5.1",
+    "jquery.js": "0.0.2-security",
+    "popper.js": "^1.16.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-player": "^2.6.2",
