--- a/web/react-front/package.json
+++ b/web/react-front/package.json
@@ -12,6 +12,7 @@
     "popper.js": "^1.16.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-modal": "^3.11.2",
     "react-player": "^2.6.2",
     "react-redux": "^7.2.2",
     "react-router-dom": "^5.2.0",
