--- a/web/react-front/package.json
+++ b/web/react-front/package.json
@@ -11,6 +11,7 @@
     "jquery.js": "0.0.2-security",
     "popper.js": "^1.16.1",
     "react": "^17.0.1",
+    "react-bootstrap": "^1.4.0",
     "react-dom": "^17.0.1",
     "react-modal": "^3.11.2",
     "react-player": "^2.6.2",
