--- a/web/react-front/package.json
+++ b/web/react-front/package.json
@@ -13,6 +13,7 @@
     "react": "^17.0.1",
     "react-bootstrap": "^1.4.0",
     "react-dom": "^17.0.1",
+    "react-icons": "^4.1.0",
     "react-modal": "^3.11.2",
     "react-player": "^2.6.2",
     "react-redux": "^7.2.2",
